---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: ?
  Adições:
    - Mods traduzidos ( +8 / Total: 84)
      Extra Storage Tanks: Tiny Storage Tanks - por ZarSasha, Aurora & Moonlight,
      Planet Akularis - por rjdunlap,
      Planet Hexalith - por rjdunlap,
      Planet Maraxsis - por notnotmelon,
      Scrap Toolkit - por SafTheLamb & S6X,
      Spidertron Enhancements - por Xorimuth,
      Spidertron Patrols - por Xorimuth,
      Wire Lamps - por peterwolf.pl
    - Mods atualizados:
      - Atualizadas traduções do mod Alloy Smelting, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Cargo Crates, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Crushing Industry, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Factorio+, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Factorissimo 3, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Fluid Recycler, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Fracking Tower, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Lunar Panel, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Manufacturer, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Molten plastic, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Ore-ganizer, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Planet Vesta, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Scrappy Chemistry, em decorrência de uma atualização do mod.
      - Atualizadas traduções do mod Voidcraft, em decorrência de uma atualização do mod.
  Ajustes: