@@ -1,0 +1,161 @@
+[mod-description]
+apia=Uma lua de Gleba com uma atmosfera densa e viscosa. Sua superfície consiste em inúmeras pequenas ilhas à deriva em oceanos de geleia real rica em nutrientes. A fauna é representada por uma simbiose de insetos produtores de mel e larvas de invertebrados.
+
+[entity-name]
+larvae=Larva
+artificial-hive=Colméia artificial
+bio-solar-panel=Bio painel solar
+biosynthesizer=Biosintetizador
+bioreactor=Bioreator
+wild-hive=Colméia
+honey-mushroom=Chapéu-de-Mel
+phosphorus-cloud=Nuvem de fósforo em chamas
+phosphorus-cloud-visual-dummy=Nuvem de fósforo em chamas
+flamethrower=Lança-chamas
+
+[entity-description]
+larvae=Uma criatura invertebrada que vive no substrato nutritivo dos oceanos de Apia.
+artificial-hive=Uma máquina biomecânica que mantém o ciclo de reprodução do favo de mel.
+bio-solar-panel=Um painel bioelétrico que gera energia por meio da fotossíntese. Ajuda a reduzir a poluição atmosférica.
+biosynthesizer=Uma máquina complexa que processa matérias-primas orgânicas em escala industrial.
+bioreactor=Um mecanismo que gera energia elétrica diretamente a partir de nutrientes. Ajuda a reduzir a poluição atmosférica.
+
+
+[fluid-name]
+royal-jelly=Geleia real
+phosphoric-acid=Ácido fosfórico
+
+[fluid-description]
+royal-jelly=Meio nutritivo formado durante o desenvolvimento do ecossistema. Pode ser utilizado na produção industrial.
+phosphoric-acid=Um ácido inorgânico moderadamente forte derivado do fósforo. Adequado para a produção de circuitos eletrônicos.
+
+
+[item-name]
+raw-larvae=Larva
+fossil-larvae=Fossil
+phosphorus=Fósforo
+honeycombs=Favos de mel
+honey=Mel
+wax=Cera
+polysaccharides=Polissacarídeos
+artificial-hive=Colméia artificial
+bio-solar-panel=Bio painel solar
+apicultural-science-pack=Pacote científico de apicultura
+wax-platform=Plataforma de cera
+flamethrower-capsule=Cápsula de drone lança-chamas
+artillery-shell-with-phosphorus=Projétil de artilharia de fósforo
+biosynthesizer=Biosintetizador
+bioreactor=Bioreator
+
+[item-description]
+raw-larvae=Uma criatura invertebrada que vive em um substrato nutritivo.
+fossil-larvae=Um exoesqueleto larval orgânico contendo sais minerais, adequado para uso industrial.
+phosphorus=Material altamente inflamável usado na produção química.
+honeycombs=Estruturas produzidas por insetos melíferos.
+honey=Um produto orgânico viscoso, rico em açúcares e água.
+wax=Um material utilizado na construção de seções de colmeias.
+polysaccharides=Carboidratos complexos compostos por longas cadeias de monossacarídeos ligados por ligações glicosídicas.
+wax-platform=Pode ser colocado na superfície dos oceanos de geleia real.
+
+
+[planet-name]
+apia=Apia
+
+[space-location-name]
+apia=Apia
+
+[space-location-description]
+apia=Uma lua de Gleba com uma atmosfera densa e viscosa. Sua superfície consiste em inúmeras pequenas ilhas à deriva em oceanos de geleia real rica em nutrientes. A fauna é representada por uma simbiose de insetos produtores de mel e larvas de invertebrados.
+
+
+[recipe-name]
+larvae-cultivation=Cultivo de larvas
+nutrients-from-larvae=Nutrientes de larvas
+nutrients-from-honey=Nutrientes de mel
+nutrients-from-polysaccharides=Nutrientes de polissacarídeos
+fossil-larvae-processing=Fissuração de fósseis
+phosphoric-acid=Ácido fosfórico
+battery-from-phosphoric-acid=Bateria de ácido fosfórico
+processing-unit-from-phosphoric-acid=Unidade de processamento de ácido fosfórico
+explosives-from-phosphorus=Explosivos de fósforo
+artillery-shell-with-phosphorus=Projétil de artilharia de fósforo
+flamethrower-ammo-from-phosphorus=Munição de lança-chamas de fósforo
+biolubricant-from-royal-jelly=Biolubrificante de geleia real
+honeycombs-processing=Processamento de favos de mel
+honey-processing=Processamento de mel
+honey-dehydration=Desidratação de mel
+bioplastic-from-wax=Bioplástico de cera
+wax-platform=Plataforma de cera
+honeycombs=Produção de favos de mel
+solid-fuel-from-polysaccharides=Combustível sólido de polissacarídeos
+rocket-fuel-from-phosphoric-acid=Combustível de foguete de ácido fosfórico
+apicultural-science-pack=Pacote científico de apicultura
+artificial-hive=Colméia artificial
+bio-solar-panel=Bio painel solar
+biosynthesizer=Biosintetizador
+bioreactor=Bioreator
+flamethrower-capsule=Cápsula de drone lança-chamas
+
+[tile-name]
+royal-jelly-lake=Oceano de geleia real
+royal-jelly-lake2=Oceano profundo de geleia real
+apia-biome1=Areias costeiras negras
+apia-biome2=Solo pegajoso
+apia-biome3=Crosta cerosa
+apia-biome4=Líquen de mel
+
+[technology-name]
+planet-discovery-apia=Apia
+parasites=Parasitas
+phosphorus=Fósforo
+phosphate-battery=Baterias de fosfato
+apiculture=Apicultura
+honey-processing=Processamento de mel
+wax-processing=Processamento de cera
+artificial-hive=Colméia artificial
+apicultural-science-pack=Pacote científico de apicultura
+flamethrower-robot=Drone lança-chamas
+bio-solar-panel=Bio painel solar
+bioreactor=Bioreator
+phosphorus-shell=Conchas de fósforo
+agriculture-productivity=Produtividade agrícola
+honeycomb-processing-productivity=Produtividade de apicultura
+thruster-productivity=Produtividade de propulsores
+biter-egg-productivity=Produtividade de ovos de mordedores
+lubricant-productivity=Produtividade de lubrificante
+
+[technology-description]
+planet-discovery-apia=Uma lua de Gleba com uma atmosfera densa e viscosa. Sua superfície consiste em inúmeras pequenas ilhas à deriva em oceanos de geleia real rica em nutrientes. A fauna é representada por uma simbiose de insetos produtores de mel e larvas de invertebrados.
+parasites=Aprenda a reproduzir o ciclo de vida larval para extrair recursos.
+phosphorus=Utilização de fósforo em processos químicos.
+phosphate-battery=Aplicação de ácido fosfórico na produção de baterias.
+apiculture=As colmeias selvagens do planeta podem se tornar uma fonte de mel e cera.
+honey-processing=O mel pode servir como fonte de água e energia para a fábrica.
+wax-processing=A capacidade térmica e as propriedades químicas da cera a tornam extremamente útil em condições planetárias.
+artificial-hive=Automatizar a produção de estruturas em favo de mel para aumentar a escala da fábrica.
+apicultural-science-pack=Um novo passo rumo ao poder.
+bio-solar-panel=Comece a utilizar a fotossíntese para a produção de energia elétrica.
+bioreactor=Sintese quimica de energia diretamente de nutrientes.
+phosphorus-shell=Não é um crime de guerra se eles mordem.
+
+[mod-setting-name]
+apia-vanila-science=Integração ao jogo padrão
+apia-science-promethium=Prometheus Apicultor.
+apia-science-research-productivity=Produtividade com apicultura
+
+[mod-setting-description]
+apia-vanila-science=As receitas e pesquisas de Apia serão integradas ao jogo padrão, exigindo progressão em outras áreas do jogo antes de poder desbloquear novas tecnologias adicionadas por este mod.
+apia-science-promethium=Exija o uso de pacotes cientificos de apicultura para desbloquear o pacote científico de Prometheus.
+apia-science-research-productivity=Tornará necessário o uso de pacotes cientificos de apicultura nas pesquisas de produtividade introduzidas por este mod.
+
+[tips-and-tricks-item-name]
+apia-briefing=Um pouco sobre Apia
+
+[tips-and-tricks-item-description]
+apia-briefing=[planet=apia] é uma lua de [planet=gleba], ela possui uma densa atmosfera, onde [entity=logistic-robot] e [entity=construction-robot] requerem uma quantidade maior de energia. Devido a espessa camada de nuvens, [entity=solar-panel] são ineficientes.\nA superfície é coberta completamente por oceanos de [fluid=royal-jelly], habitados por [entity=larvae]. Os restos endurecidos dessas criaturas podem ser processados em recursos básicos: [item=iron-ore], [item=copper-ore] e [item=stone].\nOutros habitantes do planeta incluem insetos produtores de mel que constroem [entity=wild-hive]s. Os [item=honeycombs] que eles produzem podem ser processados em [item=honey] e [item=wax].\nUm outro recurso novo e importante neste planeta é o [item=phosphorus].
+
+[achievement-name]
+visit-apia=Picada garantida
+
+[achievement-description]
+visit-apia=Viaje para a lua de Gleba, Apia.
