@@ -1,0 +1,23 @@
+[mod-name]
+pneumatic-mining-drill=Mineradora pneumática
+
+[mod-description]
+pneumatic-mining-drill=Adiciona uma mineradora que utiliza a pressão do vapor para extrair recursos do solo.
+
+[entity-name]
+pneumatic-mining-drill=Mineradora pneumática
+
+[entity-description]
+pneumatic-mining-drill=Uma mineradora que utiliza a pressão do vapor para extrair recursos do solo.
+
+[item-name]
+pneumatic-mining-drill=Mineradora pneumática
+
+[recipe-name]
+pneumatic-mining-drill=Mineradora pneumática
+
+[technology-name]
+pneumatic-mining-drill=Mineradora pneumática
+
+[technology-description]
+pneumatic-mining-drill=Uma mineradora independente de energia elétrica que utiliza a pressão do vapor para extrair recursos do solo.
