@@ -1,0 +1,17 @@
+[mod-name]
+wooden_platform=Plataforma de madeira
+
+[mod-description]
+wooden_platform=Permite posicionar máquinas e infraestrutura leves seletas sob a água, possibilitando a expansão controlada da fábrica em lagos, rios e oceanos.
+
+[item-name]
+wooden-platform=Plataforma de madeira
+
+[tips-and-tricks-item-name] 
+wooden-platform=Plataforma de madeira
+
+[tips-and-tricks-item-description]
+wooden-platform=[item=wooden-platform] é uma superfície modular que permite posicionar máquinas e infraestrutura leves sobre a água. Use plataformas para expandir sua fábrica em lagos, rios ou oceanos, mantendo o posicionamento restrito a estruturas leves e estáveis.\nObjetos suportados incluem: \n- [entity=pipe]\n- [entity=barreling-machine]\n- [entity=radar]\n- insersores\n- esteiras\n- baús logísticos/armazenamento\n- máquinas da rede de circuitos como combinador, lâmpada, etc.\n- [entity=gun-turret]\n- [entity=heavy-gun-turret]\n- [entity=flamethrower-turret]\n- [entity=rocket-turret]\n- [entity=pump] (exceto o modelo a diesel)
+
+[tile-name]
+wooden-platform=Plataforma de madeira
