@@ -4,6 +4,7 @@ V1.0.3,1.0.14,Actual Underground Pipes,protocol_1903,07/12/2025
 V1.0.3,1.0.3,Advanced Atomic Science,Velaanix,07/12/2025
 V1.0.4,1.3.6,Agricultural Roboport,Proffzulus,11/01/2026
 V1.0.4,0.6.0,Alloy Smelting,SafTheLamb & S6X,11/01/2026
+V1.0.5,0.0.1,Apia,DimonSever000,upcoming
 V1.0.3,1.5.0,Assembling Machine 2.5,DrinkShellOil,07/12/2025
 V1.0.4,0.5.0,Barreling Group,"pav, GeneralTank & Evilpla",11/01/2026
 V1.0.3,0.1.7,Basic Chemistry,EleusisLaArwall,07/12/2025
@@ -63,6 +64,7 @@ V1.0.0,2.1.9,Planet Vesta,CPU_BlackHeart,11/11/2025
 V1.0.4,1.0.2,Plasma Handling,Powerscooter,11/01/2026
 V1.0.4,1.0.21,Plasma Industries,Powerscooter,11/01/2026
 V1.0.0,0.0.312,Plasma Accelerator,ArkadiPorovozov,11/11/2025
+V1.0.5,0.9.0,Pneumatic Mining Drill,Wolbobus,upcoming
 V1.0.4,1.0.2,Promethium Belts,Helios467,11/01/2026
 V1.0.4,0.2.5,Quantum emitter,Azertyyu,11/01/2026
 V1.0.4,0.1.14,Quantum Lab,Azertyyu,11/01/2026
@@ -82,3 +84,4 @@ V1.0.3,2.7.3,Voidcraft,S6X,07/12/2025
 V1.0.5,0.1.6,Wire Lamps,peterwolf.pl,upcoming
 V1.0.4,2.1.8,Wooden Industry,SafTheLamb,11/01/2026
 V1.0.3,2.5.5,Wooden Logistics,SafTheLamb,07/12/2025
+V1.0.5,0.1.2,Wooden Platform,Talandar99,upcoming
